--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -114,9 +114,10 @@
 
 
     /* Obras */
-    #obra1, #obra2, #obra3, #obra4 
+    #obras
     {
-      margin-left: 10%;
+      min-width: 20px;
+      margin-left: 0%;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -126,13 +127,11 @@
       
     }  
 
-    .obra1-img, .obra2-img, .obra3-img, .obra4-img 
-    {
-      max-width: 80%;
+    .obra-img    {
+
       display: flex;
-      flex-direction:initial;
       align-items: center;
-    }  
+   }  
 
     footer  {
       margin-left: 10%;
@@ -145,7 +144,6 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-    
       margin-bottom: 50px;
     }
     .footer-container  {
@@ -188,11 +186,12 @@
   
   @media (max-width: 576px) {
    
+ 
     /* para el menu de la 
     derecha */
      .cart {
       left: 0;
-      width: 100%;
+      width: 900%;
       border: none;
     }
   
@@ -295,16 +294,17 @@
 
     /* OBRAS*/
     
-    #obra1, #obra2, #obra3, #obra4 
+    #obras
     {
-      margin-left: 10%;
+      min-width: 20px;
+      margin-left: 0%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      min-width: 1000px;
-      
+      gap: 15px;
+
     }  
 
     .obra1-img, .obra2-img, .obra3-img, .obra4-img 
