--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -116,7 +116,6 @@
     /* Obras */
     #obras
     {
-      min-width: 20px;
       margin-left: 0%;
       display: flex;
       flex-direction: column;
@@ -296,7 +295,6 @@
     
     #obras
     {
-      min-width: 20px;
       margin-left: 0%;
       display: flex;
       flex-direction: column;
@@ -307,8 +305,7 @@
 
     }  
 
-    .obra1-img, .obra2-img, .obra3-img, .obra4-img 
-    {
+    .obra-img {
      
       display: flex;
       flex-direction: row;
